--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -9,6 +9,14 @@ services:
         BUNDLER_ARGS: --jobs=8
     image: metasploit:dev
     environment:
-      DATABASE_URL: postgres://postgres@db:5432/msf_dev?pool=200&timeout=5
+      DATABASE_URL: postgres://postgres:postgres@db:5432/msf
     volumes:
       - .:/usr/src/metasploit-framework
+  db:
+    image: postgres:12-alpine
+    volumes:
+      - /Users/woo/msf/postgres/data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: msf
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
