--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,15 +7,15 @@ services:
     links:
       - db
     ports:
-      - 443:443
+      - 4444:4444
     volumes:
-      - $HOME/msf:/home/msf
+      - $HOME/.msf4:/home/msf/.msf4
 
   db:
     image: postgres:10-alpine
     volumes:
-      - $HOME/msf/pgdata:/var/lib/postgresql/data
-    environment:
-      POSTGRES_DB: msf
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
+      - pg_data:/var/lib/postgresql/data
+
+volumes:
+  pg_data:
+    driver: local
